# egui-opencl-fractals

./: Cargo.toml  README.md
src/: frame_view.rs  main.rs  myclwrap.rs  wrapper_types.rs
src/ocl/: mandel.cl  mandelstructs.h  mandelutils.c
