[package]
name = "egui-opencl-fractals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24"
egui = "0.24"
epaint = "0.24"
egui_extras = "0.24"
ocl = "0.19"
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect" }
# egui_inspect_wrap = { git = "https://github.com/dmirauta/egui_inspect" }
simple_ocl = { git = "https://github.com/dmirauta/simple_ocl" }
ndarray = "0.15"
image = "0.24"
rfd = "0.12"
